# cpp_template

./: CMakeLists.txt  LICENSE
install/lib/: libmodule3.dylib
module1/: CMakeLists.txt
module1/src/: main.cpp
module1/test/: CMakeLists.txt  test1.cpp
module2/: CMakeLists.txt
module2/include/module2/: test.h
module2/src/: test.cpp
module3/: CMakeLists.txt
module3/include/module3/: test.h
module3/src/: test.cpp
